Fix vertical scrollbar in home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,6 +611,10 @@ footer {
 	left: 0;
 }
 
+.position {
+	position: absolute;
+}
+
 footer .main {
 	display: flex;
 	flex-direction: row;
